--- a/typescript/0x00-ts/package.json
+++ b/typescript/0x00-ts/package.json
@@ -12,5 +12,11 @@
     "demo"
   ],
   "author": "ralex",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/node": "^18.7.15",
+    "nodemon": "^2.0.19",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.2"
+  }
 }
