nodemon, /src and tsconfig for nodemon

--- a/typescript/0x00-ts/package.json
+++ b/typescript/0x00-ts/package.json
@@ -4,7 +4,8 @@
   "description": "TypeScript project for learning",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "tsNode": "cd src && ts-node index.ts",
+    "start": "nodemon"
   },
   "keywords": [
     "typescript",
