--- a/typescript/0x00-ts/package.json
+++ b/typescript/0x00-ts/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "tsNode": "cd src && ts-node index.ts",
-    "start": "nodemon"
+    "start": "nodemon",
+    "build": "tsc"
   },
   "keywords": [
     "typescript",
