--- a/typescript/0x00-ts/package.json
+++ b/typescript/0x00-ts/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "tsNode": "cd src && ts-node index.ts",
     "start": "nodemon",
-    "build": "tsc"
+    "build": "tsc",
+    "build:prod": "rimraf ./build && tsc",
+    "start:prod": "npm run build:prod && node build/index.js"
   },
   "keywords": [
     "typescript",
@@ -18,6 +20,7 @@
   "devDependencies": {
     "@types/node": "^18.7.15",
     "nodemon": "^2.0.19",
+    "rimraf": "^3.0.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.2"
   }
