--- a/typescript/0x00-ts/package.json
+++ b/typescript/0x00-ts/package.json
@@ -23,5 +23,8 @@
     "rimraf": "^3.0.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.2"
+  },
+  "dependencies": {
+    "cookies-utils": "^1.0.0"
   }
 }
